Japanese Banner Introduction changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -7,7 +7,7 @@
     },
     "Banner":{
         "Hi": "こんにちは！アディティです",
-        "Introduction":"アートと勉強が好きでウェブ開発者を目指しています！日本で３年間を住み、２年間IT技術者として働いています。",
+        "Introduction":"アートと勉強が好きでウェブ開発者を目指しています！日本に3年間住んでいて、IT技術者として、2年間働いています。",
         "Based": "東京で在中してます。"
     },
     "Skills":{
