Japanese Based Introduction changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -8,7 +8,7 @@
     "Banner":{
         "Hi": "こんにちは！アディティです",
         "Introduction":"アートと勉強が好きでウェブ開発者を目指しています！日本に3年間住んでいて、IT技術者として、2年間働いています。",
-        "Based": "東京で在中してます。"
+        "Based": "現在、東京在住です。"
     },
     "Skills":{
         "Experience": "バイオテクノロジーで博士号、日本語能力試験でN1(2020)、TOIECで970点(2019)を持ち、学ぶことが好きです仕事でPostgreSQLみたいな関係データベース管理システムの経験が２年ぐらいあります。プログラミング、デザインと学ぶことが大事だと思ってウェブ開発者になることにインスパイアされました。",
