Japanese Contact ContactMe changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -30,7 +30,7 @@
         "Calculator": "電卓"
     },
     "Contact":{
-        "ContactMe":"連絡を取る",
+        "ContactMe":"連絡先はこちら",
         "Info": "ウェブ開発のお仕事希望してます！お気軽に連絡してください。できるだけ早くフォローアップします。",
         "MessageMe": "",
         "SendMe": "でメッセージか",
