Japanese Contact Info changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -31,7 +31,7 @@
     },
     "Contact":{
         "ContactMe":"連絡先はこちら",
-        "Info": "ウェブ開発のお仕事承ります。お気軽に下記までご連絡ください。",
+        "Info": "ウェブ開発のお仕事承ります。お気軽に下記までご連絡ください。できるだけ早くお返事いたします。",
         "MessageMe": "",
         "SendMe": "でメッセージか",
         "Mail":"でメールを送ってください"
