Japanese Skills Experience changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -11,7 +11,7 @@
         "Based": "現在、東京在住です。"
     },
     "Skills":{
-        "Experience": "バイオテクノロジーで博士号、日本語能力試験でN1(2020)、TOIECで970点(2019)を持ち、学ぶことが好きです仕事でPostgreSQLみたいな関係データベース管理システムの経験が２年ぐらいあります。プログラミング、デザインと学ぶことが大事だと思ってウェブ開発者になることにインスパイアされました。",
+        "Experience": "バイオテクノロジー　修士日本語能力試験N1(2020)TOEIC 970点(2019)。私は学ぶことが好きです。仕事ではPostgre SQLのような関係データベース管理システムの経験が2年くらいあります。プログラミングやデザインなどの学びからインスパイアされ、ウェブ開発者になることを目指しております。",
         "Info": "以下は１年間の勉強で得たスキルです。"
     },
     "Projects":{
