Japanese Skills Info changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -12,7 +12,7 @@
     },
     "Skills":{
         "Experience": "バイオテクノロジー　修士日本語能力試験N1(2020)TOEIC 970点(2019)。私は学ぶことが好きです。仕事ではPostgre SQLのような関係データベース管理システムの経験が2年くらいあります。プログラミングやデザインなどの学びからインスパイアされ、ウェブ開発者になることを目指しております。",
-        "Info": "以下は１年間の勉強で得たスキルです。"
+        "Info": "以下は1年間の勉強の成果です。"
     },
     "Projects":{
         "Title":"プロジェクト",
