Japanese Projects Description changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -16,7 +16,7 @@
     },
     "Projects":{
         "Title":"プロジェクト",
-        "Description": "以下は私のスキルを表すするためのアプリ、ウェブサイトとゲームのプロジェクトです。",
+        "Description": "プロジェクト以下は私が作成したアプリ、ウェブサイト、ゲームのプロジェクトです。",
         "Info": "全てのプロジェクトを見るために以下のタブを押してください！",
         "Tab1": "タブ 1",
         "Tab2": "タブ 2",
