Japanese Info changed

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -17,7 +17,7 @@
     "Projects":{
         "Title":"プロジェクト",
         "Description": "プロジェクト以下は私が作成したアプリ、ウェブサイト、ゲームのプロジェクトです。",
-        "Info": "全てのプロジェクトを見るために以下のタブを押してください！",
+        "Info": "全てのプロジェクトを見るには以下のタブを押してください",
         "Tab1": "タブ 1",
         "Tab2": "タブ 2",
         "Tab3": "タブ 3",
