--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -8,16 +8,16 @@
     "Banner":{
         "Hi": "こんにちは！アディティです",
         "Introduction":"アートと勉強が好きでウェブ開発者を目指しています！日本に3年間住んでいて、IT技術者として、2年間働いています。",
-        "Based": "東京で在中してます。"
+        "Based": "現在、東京在住です。"
     },
     "Skills":{
-        "Experience": "バイオテクノロジーで博士号、日本語能力試験でN1(2020)、TOIECで970点(2019)を持ち、学ぶことが好きです仕事でPostgreSQLみたいな関係データベース管理システムの経験が２年ぐらいあります。プログラミング、デザインと学ぶことが大事だと思ってウェブ開発者になることにインスパイアされました。",
-        "Info": "以下は１年間の勉強で得たスキルです。"
+        "Experience": "バイオテクノロジー　修士日本語能力試験N1(2020)TOEIC 970点(2019)。私は学ぶことが好きです。仕事ではPostgre SQLのような関係データベース管理システムの経験が2年くらいあります。プログラミングやデザインなどの学びからインスパイアされ、ウェブ開発者になることを目指しております。",
+        "Info": "以下は1年間の勉強の成果です。"
     },
     "Projects":{
         "Title":"プロジェクト",
-        "Description": "以下は私のスキルを表すするためのアプリ、ウェブサイトとゲームのプロジェクトです。",
-        "Info": "全てのプロジェクトを見るために以下のタブを押してください！",
+        "Description": "プロジェクト以下は私が作成したアプリ、ウェブサイト、ゲームのプロジェクトです。",
+        "Info": "全てのプロジェクトを見るには以下のタブを押してください",
         "Tab1": "タブ 1",
         "Tab2": "タブ 2",
         "Tab3": "タブ 3",
@@ -30,8 +30,8 @@
         "Calculator": "電卓"
     },
     "Contact":{
-        "ContactMe":"連絡を取る",
-        "Info": "ウェブ開発のお仕事希望してます！お気軽に連絡してください。できるだけ早くフォローアップします。",
+        "ContactMe":"連絡先はこちら",
+        "Info": "ウェブ開発のお仕事承ります。お気軽に下記までご連絡ください。できるだけ早くお返事いたします。",
         "MessageMe": "",
         "SendMe": "でメッセージか",
         "Mail":"でメールを送ってください"
