--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -11,7 +11,7 @@
         "Based": "I am based in Tokyo."
     },
     "Skills":{
-        "Experience": "With a Masters degree in Biotechnology, N1 in JLPT(2020),970 in TOEIC(2019), I pretty much like studying. I have an experience in Data Analysis for about two years and use database management system like PostgreSQL on a daily basis. My interest in programming, art and learning has inpired me to be a Web Developer.",
+        "Experience": "With a Masters degree in Biotechnology, N1 in JLPT(2020),970 in TOEIC(2019), I pretty much like studying. I have an experience in Data Analysis for about two years and use database management system like PostgreSQL on a daily basis. My interest in programming, art and learning has inspired me to be a Web Developer.",
         "Info": "Below are the skills I have picked up learning web development for a year."
     },
     "Projects":{
